# FinanceDecoder

./: Procfile  README.md
FinanceDecoder/dashboard/scraper/downloaded_xls/: AZ_Bullhead_City.xlsx  CO_Loveland.xlsx  CT_Branford.xlsx  MB_Steinbach.xlsx  MI_Detroit.xlsx  NC_Asheville.xlsx  OH_Columbus.xlsx  TN_East_Ridge.xlsx  TX_Addison.xlsx  UT_Nibley.xlsx  financials_tidy.csv
Financial Decoder Dash/FinDecoderDash/: app.py
Financial Decoder Dash/Scrape/downloaded_xls/: AB_Calgary.xlsx  CA_South_Lake_Tahoe.xlsx  IL_Chicago.xlsx  MN_Minneapolis.xlsx  NE_Omaha.xlsx  PA_Hermitage.xlsx  WA_Vancouver.xlsx  WI_Sheboygan.xlsx
dashboard/: app.py  requirements.txt
dashboard/assets/: styles.css
reqs/: pyproject.toml
scraper/: scrape_mymaps_sheets.py  tidy_decoder.py
scraper/downloaded_xls/: MD_Aberdeen.xlsx  NH_Portsmouth.xlsx  TX_Beaumont.xlsx  TX_Dallas.xlsx  UT_Cottonwood_Heights.xlsx  WI_Bellevue.xlsx
